<resources>
    <string name="app_name">VidVerse</string>

    <string name="title_my_reversed_video">我的倒播视频</string>
    <string name="title_selected_reversed_video">精选倒播视频</string>
    <string name="title_feedback">反馈</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_share">Share</string>
    <string name="action_feedback">Feedback</string>
    <string name="send_feeback">发送</string>
    <string name="start_reverse">倒播转换</string>
    <string name="edit_feedback_content_hint">反馈内容</string>
    <string name="edit_feedback_mail_hint">您的邮箱（方便告知反馈的结果，选填）</string>
    <string name="connect_us_hint">深入交流请联系我们的 Facebook</string>
    <string name="connect_us_link">VidVerse</string>
    <string name="choose_camera">拍摄</string>
    <string name="choose_local">本地选取</string>
    <string name="no_reversed_videos">暂无倒播视频，马上创建一个吧</string>
    <string name="camera_title">15秒内短视频</string>
    <string name="title_origin_video">原视频</string>
    <string name="title_reversing">倒播转换中</string>
    <string name="title_reversed">倒播视频</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_video_preview">VideoPreviewActivity</string>
    <string name="no_picked_video">无效视频</string>
    <string name="title_activity_do_reverse">DoReverseActivity</string>
    <string name="cannot_find_video">Cannot find the video.</string>

    <string name="hello_world">Hello world!</string>
</resources>
