<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".FeedbackFragment">

    <EditText
        android:id="@+id/edit_feedback_content"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dip"
        android:padding="5dip"
        android:singleLine="false"
        android:gravity="top"
        android:hint="@string/edit_feedback_content_hint"
        android:background="@drawable/edittext_style"/>

    <EditText
        android:id="@+id/edit_feedback_mail"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="0dip"
        android:padding="5dip"
        android:singleLine="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/edit_feedback_mail_hint"
        android:background="@drawable/edittext_style"
        android:layout_below="@id/edit_feedback_content"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_feeback"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/btn_text_color"
        android:textSize="@dimen/btn_text_size_large"
        android:background="@drawable/button_style"
        android:layout_below="@id/edit_feedback_mail"/>

    <TextView
        android:id="@+id/textview_connect_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginBottom="20dip"
        android:text="@string/connect_us_link"/>

    <TextView
        android:layout_above="@id/textview_connect_link"
        android:id="@+id/textview_connect_hint"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginBottom="20dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_us_hint"/>

</RelativeLayout>
