<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gridview_parent"
        android:visibility="gone"
        >
        <GridView xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/GridView"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:numColumns="2"
                  android:columnWidth="90dp"
                  android:layout_margin="5dp"
                  android:stretchMode="columnWidth"
                  android:gravity="center">
        </GridView>

        <ImageView
                android:id="@+id/btn_choose_reverse"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/btn_float_reverse"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>

        <RelativeLayout
            android:id="@+id/relativelayout_hide_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_above="@id/btn_choose_reverse"
            android:layout_alignRight="@id/btn_choose_reverse"
            android:layout_centerVertical="true"
            android:background="@drawable/img_hide_menu_bg">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/frame_menu_camera">
                <ImageView
                    android:id="@+id/img_hide_menu_rec"
                    android:src="@drawable/img_hide_menu_rec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_toRightOf="@id/img_hide_menu_rec"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/btn_text_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_camera"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_below="@id/frame_menu_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/frame_menu_choose_local">
                <ImageView
                    android:id="@+id/img_hide_menu_local"
                    android:src="@drawable/img_hide_menu_local"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_toRightOf="@id/img_hide_menu_local"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/btn_text_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_local"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/empty_videos_parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="21dp"
            android:textColor="#bbbbbb"
            android:id="@+id/textview_no_videos"
            android:text="@string/no_reversed_videos"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:src="@drawable/no_reversed_videos"
            android:layout_above="@id/textview_no_videos"/>
        <Button
            android:layout_width="@dimen/btn_width_large"
            android:layout_height="@dimen/btn_height_large"
            android:layout_centerInParent="true"
            android:layout_marginTop="60dp"
            android:textColor="@color/btn_text_color"
            android:textSize="@dimen/btn_text_size_large"
            android:text="@string/choose_camera"
            android:layout_below="@id/textview_no_videos"
            android:id="@+id/btn_start_camera"
            android:background="@drawable/button_style"/>
        <Button
            android:layout_width="@dimen/btn_width_large"
            android:layout_height="@dimen/btn_height_large"
            android:layout_centerInParent="true"
            android:textColor="@color/btn_text_color"
            android:textSize="@dimen/btn_text_size_large"
            android:layout_marginTop="30dp"
            android:text="@string/choose_local"
            android:layout_below="@id/btn_start_camera"
            android:id="@+id/btn_choose_local"
            android:background="@drawable/button_style"/>
    </RelativeLayout>
</RelativeLayout>